[gd_scene load_steps=5 format=3 uid="uid://dq2axf2n0pshg"]

[ext_resource type="Script" uid="uid://cc67eu2e0udfa" path="res://scripts/elevator.gd" id="1_otkwm"]
[ext_resource type="Texture2D" uid="uid://t0k5lsctf3x8" path="res://assets/1-bit pack/Tilesheet/colored.png" id="1_u8tpn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_otkwm"]
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u8tpn"]
size = Vector2(2, 2)

[node name="DownElevator" type="StaticBody2D"]
script = ExtResource("1_otkwm")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_otkwm")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_u8tpn")
region_enabled = true
region_rect = Rect2(680, 0, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_otkwm")

[node name="PowerCheck" type="Area2D" parent="."]
position = Vector2(0, -8)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerCheck"]
shape = SubResource("RectangleShape2D_u8tpn")

[node name="PowerCheck2" type="Area2D" parent="."]
position = Vector2(8, 0)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerCheck2"]
shape = SubResource("RectangleShape2D_u8tpn")

[node name="PowerCheck3" type="Area2D" parent="."]
position = Vector2(0, 8)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerCheck3"]
shape = SubResource("RectangleShape2D_u8tpn")

[node name="PowerCheck4" type="Area2D" parent="."]
position = Vector2(-8, 0)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerCheck4"]
shape = SubResource("RectangleShape2D_u8tpn")

[connection signal="area_entered" from="Area2D" to="." method="_on_elevator_entered"]
